fix: news links too wide

--- a/src/components/newsCard/newsCardStyles.module.css
+++ b/src/components/newsCard/newsCardStyles.module.css
@@ -10,12 +10,12 @@
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     height: 150px;
-    margin-top: 15px;
+    margin-top: 10px;
     overflow: hidden;
     position: relative;
     top: 0;
     transition: all 0.3s;
-    width: 70%;
+    width: 100%;
 }
 
 .card:hover {
@@ -33,7 +33,7 @@
     overflow: hidden;
     position: relative;
     top: 0;
-    width: 70%;
+    width: 100%;
 }
 
 .primaryCard:hover .primaryNewsImage {
