--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,7 +14,7 @@ html {
 
 .mainContentContainer {
     position: relative;
-    width: 100%;
+    width: 70%;
     height: 100%;
     opacity: 1;
     -webkit-animation: fadeInLayout 3s ease-in;
